@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
+set -ex
+export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
+export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.xml.bind'
 SDKMANAGER=$ANDROID_HOME/tools/bin/sdkmanager
 echo y | $SDKMANAGER "ndk;21.4.7075529"
-export JAVA_HOME=$JAVA_HOME_11_X64
-echo $JAVA_HOME
-echo $JAVA_HOME_11_X64
